# GleedSDL

./: .gitignore  CMakeLists.txt  LICENSE  README.md  libvpx.cmake
examples/: CMakeLists.txt  COPYRIGHT  basic.cpp  bunny2.webm  hl2.webm  main.cpp  player.cpp  test.cpp
include/: SDL_movie.h  gleed.h
src/: SDL_movie.c  SDL_movie_internal.h  SDL_movie_opus.c  SDL_movie_player.c  SDL_movie_vorbis.c  SDL_movie_vp8.c  SDL_movie_vpx.c  SDL_movie_webm.cpp  SDL_movie_webm.h  gleed_movie.c  gleed_movie_internal.h  gleed_movie_opus.c  gleed_movie_player.c  gleed_movie_vorbis.c  gleed_movie_vpx.c  gleed_movie_webm.cpp  stb_vorbis_impl.c
